Features/customerPortal/force-app/main/default/objects/Customer_Portal_Action__e/Customer_Portal_Action__e.object-meta.xml
<CustomObject>
    <description>Platform event used by public Customer Portal to log actions without direct guest-user record updates.</description>
    <label>Customer Portal Action</label>
    <pluralLabel>Customer Portal Actions</pluralLabel>
</CustomObject>