Features/customerPortal/force-app/main/default/objects/Customer_Portal_Action__e/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>