Features/customerPortal/force-app/main/default/objects/Customer_Portal_Action__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>