Features/customerPortal/force-app/main/default/objects/Customer_Portal_Action__e/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <label>Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>