Features/customerPortal/force-app/main/default/objects/Customer_Portal_Action__e/fields/Load_Id__c.field-meta.xml
<CustomField>
    <fullName>Load_Id__c</fullName>
    <label>Load Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>