Features/customerPortal/force-app/main/default/objects/Customer_Portal_Action__e/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <label>Token Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>